tests/ucc/type/good/enum-2.c
int main(void)
{
    enum
    {
        LOL = 1,
    } a;

    a = LOL;

    return a;
}
