tests/ucc/type/bad/void-as-var-type.c
int main(void)
{
    void a;

    return 0;
}
